--- a/style.css
+++ b/style.css
@@ -802,7 +802,7 @@ body.dark footer {
     top: 0;
     z-index: 1000;
     animation: slideDown 0.8s ease-out;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 7px 25px #b16c6c;
 }
 
 
